Refactored code to use application.properties for spring boot.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 #spring.profiles.active=es
+
+guru.user=dipankar
+guru.password=12345678
+guru.dburl=localhost:8080/testdb
+
+guru.jms.username=JMS Dipankar
+guru.jms.password=jms1234
+guru.jms.dburl=localhost:8080/jms
