Profile based YAML configuration.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,11 @@ guru:
       username: JMS Dipankar
       password: jms1234
       dburl: localhost:8080/jms
+
+---
+spring:
+  profiles: de
+
+guru:
+  jms:
+    username: dipankar in german again
